fix tile padding defaults on mobile browsers

--- a/static/styles.css
+++ b/static/styles.css
@@ -104,6 +104,7 @@ h1 > a {
   height: 1.5em;
   line-height: 1.5em;
   outline: none;
+  padding: 0;
   text-align: center;
   text-transform: uppercase;
   width: 1.5em;
